@@ -1,3 +1,14 @@
+2006-01-08  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Improved electric. Added diode support. Not sure it's correct
+	but it 'does' something and show evidence of the current order
+	Added a little spot to let the user layout wires cleanly.
+
+	* boards/electric/diode.png
+	* boards/electric/battery.png:
+	* boards/electric/connect_spot.png:
+	* src/boards/python/electric.py:
+
 2006-01-06  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Improved the placement of object. Fixed multiple gnucap component
